--- a/Movies/app/src/main/res/values-night/themes.xml
+++ b/Movies/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,6 @@
 <resources>
 
     <style name="Theme.Movies" parent="android:Theme.Material.NoActionBar">
-        <item name="android:statusBarColor">@color/black</item>
+        <item name="android:statusBarColor">@color/dark_inverse_on_surface</item>
     </style>
 </resources>
